# forge

./: .env.example  .gitignore  AGENT_FORGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  industry_application.md
.github/workflows/: apple-validate.yml  audit-sweep.yml  ci.yml  fpga-sim.yml  release-vscode.yml  release.yml  rescue-suite.yml
data/: README.md  audit_log.md  operators.json  status.md  tower_registry.json
docs/: backends.md  boundary_calculus.md  boundary_event_taxonomy.md  boundary_rescue_operators.md  fpga-guide.md  getting_started.md  hardware_targets.md  language-reference.md  language_guide.md  proof_carrying_rescue_suite.md  quickstart.md  rescue_semantics_v0.md  research_artifact_contract.md  software_targets.md  units-and-refinements.md  verification_guide.md  verify-guide.md
docs/api_reference/: backends.md  cli.md  targets.md
docs/architecture/: optimizer_pipeline.md  overview.md  profiler.md
docs/industry_guides/: aerospace.md  audio.md  automotive.md  medical.md  ml_inference.md  robotics.md
docs/learn/: eml_in_30_minutes.md
examples/: README.md  __init__.py  audio_pole_refined.eml  clamp_bounded.eml  damped_wave.eml  exponential_decay.eml  gaussian.eml  guard_clamp_rescue.eml  hello.eml  lerp.eml  pid_controller.eml  precision_escape_rescue.eml  proof_carrying_rescue.eml  quadratic.eml  rc_filter.eml  saturation_deshelf_rescue.eml  sigmoid.eml  sine_oscillator.eml  smoothstep.eml  verified_add.eml  voltage_divider.eml
examples/maglev/: controller.eml  driver.eml  power.eml  sensor.eml
examples/photonics/: README.md
examples/proofs/: README.md
forge/: __init__.py
forge/blocks/: README.md  __init__.py  _core.py  control.py  exponential.py  oscillator.py  polynomial.py  signal.py  transform.py
hardware/allocator/: __init__.py  allocator.py  precision_selector.py
hardware/hdl_gen/: __init__.py  chisel_backend.py  qformat.py  systemverilog_backend.py  verilog_backend.py  vhdl_backend.py
hardware/modules/: README.md
hardware/simulation/: verilator_sim.py
hardware/targets/: README.md
industries/: README.md
industries/aerospace/: README.md
industries/audio/: README.md
industries/automotive/: README.md
industries/chemistry/: README.md
industries/crypto/: README.md
industries/defense/: README.md
industries/energy/: README.md
industries/finance/: README.md
industries/gaming/: README.md
industries/geospatial/: README.md  great_circle_bearing.eml  haversine_distance.eml  mercator_projection.eml  utm_projection.eml
industries/imaging/: README.md  bayer_demosaic.eml  bilateral_filter.eml  gamma_correct.eml  unsharp_mask.eml
industries/maglev/: README.md  controller.eml  levitation.eml  sensor.eml
industries/manufacturing/: README.md
industries/medical/: README.md
industries/ml/: README.md
industries/radar/: README.md  cfar_threshold.eml  radar_equation.eml
industries/robotics/: README.md
industries/scientific/: README.md
industries/semiconductor/: README.md  bjt_collector_current.eml  mosfet_drain_current.eml  op_amp_inverting.eml  rc_time_constant.eml  shockley_diode.eml
industries/telecom/: README.md  friis_link_budget.eml  ofdm_subcarrier.eml  pulse_compression.eml  qam_demod.eml  shannon_capacity.eml
lang/fingerprint/: __init__.py  compute.py  embed.py  fingerprint.schema.json  shape_class.py  shape_classes_v1.json
lang/lint/: __init__.py  transcendental.py
lang/loader/: __init__.py  resolver.py
lang/optimizer/: __init__.py  _chain_order_fast.py  constant_folding.py  cse.py  fusion.py  inliner.py  log_domain.py  ml_routing.py  superbest.py  tree_shaker.py
lang/parser/: __init__.py  ast_nodes.py  errors.py  lexer.py  parser.py  type_checker.py
lang/profiler/: __init__.py  ast_to_sympy.py  dynamics.py  eml_interpreter.py  profiler.py  sympy_to_ast.py
lang/refinements/: __init__.py  ast.py  auto_splice.py  check.py  entail.py  error.py
lang/safety/: __init__.py  check.py
lang/spec/: EML_LANG_DESIGN.md  SPEC.md
lang/unit_types/: __init__.py  check.py  diagnostics.py  infer.py  resolver.py  unit.py
lang/zkproof/: __init__.py  circuit.py  plonky2_runner.py  prover.py
lang/zkproof/plonky2_backend/: Cargo.toml  README.md  rust-toolchain.toml
lang/zkproof/plonky2_backend/src/: circuit.rs  main.rs  proof_io.rs
patents/: README.md  index.md
patents/strategy/: FILING_TIMELINE.md  LICENSING.md  PRIOR_ART.md
registry/: fingerprints.jsonl
reports/: boundary_intervention_benchmark_2026_05_26.json  boundary_intervention_benchmark_2026_05_26.md  boundary_optimizer_benchmark_2026_05_26.json  boundary_optimizer_benchmark_2026_05_26.md  guard_clamp_rescue_2026_05_26.json  guard_clamp_rescue_2026_05_26.md  log_domain_candidate_benchmark_2026_05_26.json  log_domain_candidate_benchmark_2026_05_26.md  precision_escape_rescue_2026_05_26.json  precision_escape_rescue_2026_05_26.md  proof_carrying_rescue_2026_05_26.json  proof_carrying_rescue_2026_05_26.md  proof_carrying_rescue_replay_v0_2026_05_26.json  proof_carrying_rescue_suite_v0_2026_05_26.json  proof_carrying_rescue_suite_v0_2026_05_26.md  rescue_artifact_approval_v0_2026_05_26.json  rescue_obligation_registry_v0_2026_05_26.json  saturation_deshelf_rescue_2026_05_26.json  saturation_deshelf_rescue_2026_05_26.md  useful_volume_census_2026_05_26.json  useful_volume_census_2026_05_26.md
roadmap/: README.md
roadmap/business/: go_to_market.md  (+2 more)
software/runtime/c/: CMakeLists.txt  README.md  libmonogate.c  libmonogate.h
software/runtime/c/pkg-config/: monogate.pc
software/runtime/c/tests/: test_operators.c
software/runtime/rust/: Cargo.toml
software/runtime/rust/src/: lib.rs
tests/: conftest.py  test_license_verifier.py
tools/: boundary_optimizer_benchmark.py  forge_graph.py  guard_clamp_rescue.py  log_domain_benchmark.py  precision_escape_rescue.py  proof_carrying_rescue.py  proof_carrying_rescue_replay.py  proof_carrying_rescue_suite.py  saturation_deshelf_rescue.py  useful_volume_census.py
(+570 files in other folders)
