[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monogate-forge"
version = "0.1.0"
description = "EML language and compiler for verified mathematical computation. 31 backends spanning software, GPU shaders, hardware (FPGA/ASIC), formal verification, and safety-critical systems."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Arturo R. Almaguer", email = "almaguer1986@gmail.com" },
    { name = "Mosa Creates LLC" },
]
maintainers = [
    { name = "Arturo R. Almaguer", email = "almaguer1986@gmail.com" },
]
keywords = [
    "compiler",
    "programming-language",
    "formal-verification",
    "lean",
    "fpga",
    "hdl",
    "verilog",
    "vhdl",
    "safety-critical",
    "embedded",
    "math",
    "shader",
    "hlsl",
    "metal",
    "wgsl",
    "eml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "eml-cost>=0.19.0",
    # License token signature verification. Used by tools/license/
    # to gate Pro backends behind an Ed25519-signed token.
    "cryptography>=42",
]

[project.urls]
Homepage      = "https://monogateforge.com"
Documentation = "https://monogate.dev/learn/eml/intro"
Repository    = "https://github.com/agent-maestro/forge"
Issues        = "https://github.com/agent-maestro/forge/issues"
Changelog     = "https://github.com/agent-maestro/forge/blob/master/CHANGELOG.md"
"VS Code Extension" = "https://marketplace.visualstudio.com/items?itemName=monogate.eml-lang"
"Research"    = "https://monogate.org"
"MachLib"     = "https://machlib.org"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]
# `pip install monogate-forge[lsp]` pulls in pygls so the
# `eml-lsp` entry point can run. Optional so the base install
# stays small for users who only want the CLI.
lsp = [
    "pygls>=2.0",
    "lsprotocol>=2024.0.0b1",
]

[project.scripts]
eml-compile = "tools.cli.main:main"
eml-lsp     = "tools.ide.lsp.server:main"

[tool.setuptools.packages.find]
# Auto-discover every Python package (any dir with __init__.py or
# any namespace package containing one). Hand-listing was lossy --
# lang.loader, tools.benchmarks, tools.fmt all got dropped from
# the previous wheel. Excludes test directories so installs stay
# slim and tests don't get importable as `lang.parser.tests`.
include = ["lang*", "software*", "hardware*", "tools*"]
exclude = ["*.tests*", "tests*"]

[tool.setuptools.package-data]
# Ship the stdlib .eml modules + spec markdown alongside the
# Python code. The loader resolves `use stdlib::math;` to
# `<install>/lang/spec/stdlib/math.eml` via Path(__file__).parents
# from lang/loader/resolver.py, so the on-disk layout must
# match the source layout.
"lang.spec" = ["*.md", "**/*.eml", "**/*.md", "**/*.g4"]
"lang.spec.stdlib" = ["*.eml", "*.md"]
"lang.spec.grammar" = ["*.g4", "examples/**/*"]
"lang.spec.types" = ["*.md"]
# Hardware module library + verification templates ship as data
# next to the Python that emits them. Globs are file-extension
# scoped so test files don't leak into the wheel.
"hardware.modules" = ["**/*.v", "**/*.sv", "**/*.vhd", "**/*.scala",
                       "**/*.md"]
"software.verification" = ["**/*.lean", "**/*.v", "**/*.thy",
                            "**/*.smt2", "**/*.md", "**/*.toml"]

[tool.pytest.ini_options]
# Tests live in:
#   - tests/             : top-level integration + stdlib + equivalence + industry
#   - lang/**/tests/     : per-package unit tests (parser, profiler)
#   - software/**/tests/ : backend tests
#   - hardware/**/tests/ : hardware module + simulation tests
testpaths = [
    "tests",
    "lang",
    "software",
    "hardware",
    "tools",
]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
