[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monogate-forge"
version = "0.1.0"
description = "EML language and compiler for verified mathematical computation. 31 backends spanning software, GPU shaders, hardware (FPGA/ASIC), formal verification, and safety-critical systems."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Arturo R. Almaguer", email = "almaguer1986@gmail.com" },
    { name = "Mosa Creates LLC" },
]
maintainers = [
    { name = "Arturo R. Almaguer", email = "almaguer1986@gmail.com" },
]
keywords = [
    "compiler",
    "programming-language",
    "formal-verification",
    "lean",
    "fpga",
    "hdl",
    "verilog",
    "vhdl",
    "safety-critical",
    "embedded",
    "math",
    "shader",
    "hlsl",
    "metal",
    "wgsl",
    "eml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "eml-cost>=0.19.0",
    # License token signature verification. Used by tools/license/
    # to gate Pro backends behind an Ed25519-signed token.
    "cryptography>=42",
]

[project.urls]
Homepage      = "https://monogateforge.com"
Documentation = "https://monogate.dev/learn/eml/intro"
Repository    = "https://github.com/agent-maestro/forge"
Issues        = "https://github.com/agent-maestro/forge/issues"
Changelog     = "https://github.com/agent-maestro/forge/blob/master/CHANGELOG.md"
"VS Code Extension" = "https://marketplace.visualstudio.com/items?itemName=monogate.eml-lang"
"Research"    = "https://monogate.org"
"MachLib"     = "https://machlib.org"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]
# `pip install monogate-forge[lsp]` pulls in pygls so the
# `eml-lsp` entry point can run. Optional so the base install
# stays small for users who only want the CLI.
lsp = [
    "pygls>=2.0",
    "lsprotocol>=2024.0.0b1",
]

[project.scripts]
eml-compile = "tools.cli.main:main"
eml-lsp     = "tools.ide.lsp.server:main"
eml-repl    = "tools.cli.repl:main"

[tool.setuptools.packages.find]
# Auto-discover every Python package (any dir with __init__.py or
# any namespace package containing one). Hand-listing was lossy --
# lang.loader, tools.benchmarks, tools.fmt all got dropped from
# the previous wheel. Excludes test directories so installs stay
# slim and tests don't get importable as `lang.parser.tests`.
#
# `industries*` is explicitly excluded as a belt-and-suspenders
# guard: the include list above already filters it out, but the
# directory holds proprietary kernel IP that must never enter the
# Free-tier wheel. Keep this exclusion until the open/closed split
# changes (and update CHANGELOG.md when it does).
include = ["lang*", "software*", "hardware*", "tools*", "examples*"]
exclude = ["*.tests*", "tests*", "industries*", "industries.*"]

[tool.setuptools.package-data]
# Ship the stdlib .eml modules + spec markdown alongside the
# Python code. The loader resolves `use stdlib::math;` to
# `<install>/lang/spec/stdlib/math.eml` via Path(__file__).parents
# from lang/loader/resolver.py, so the on-disk layout must
# match the source layout.
"lang.spec" = ["*.md", "**/*.eml", "**/*.md", "**/*.g4"]
"lang.spec.stdlib" = ["*.eml", "*.md"]
"lang.spec.grammar" = ["*.g4", "examples/**/*"]
"lang.spec.types" = ["*.md"]
# Hardware module library + verification templates ship as data
# next to the Python that emits them. Globs are file-extension
# scoped so test files don't leak into the wheel.
"hardware.modules" = ["**/*.v", "**/*.sv", "**/*.vhd", "**/*.scala",
                       "**/*.md"]
"software.verification" = ["**/*.lean", "**/*.v", "**/*.thy",
                            "**/*.smt2", "**/*.md", "**/*.toml"]
# Public teaching examples — non-proprietary .eml files that
# demonstrate language features. Reference these from the README,
# docs, and live demos. The proprietary kernel library (industries/)
# is gated behind Pro tier and never enters the wheel.
"examples" = ["*.eml", "*.md"]

[tool.pytest.ini_options]
# Tests live in:
#   - tests/             : top-level integration + stdlib + equivalence + industry
#   - lang/**/tests/     : per-package unit tests (parser, profiler)
#   - software/**/tests/ : backend tests
#   - hardware/**/tests/ : hardware module + simulation tests
testpaths = [
    "tests",
    "lang",
    "software",
    "hardware",
    "tools",
]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    # Per-machine scratch outputs from compile-to-all sessions —
    # gitignored already, but ruff still picks them up if present.
    "demo",
    "final_check",
    "build",
    ".venv",
]

[tool.ruff.lint]
# Default ruleset (E + F) plus a small subset; explicit ignores
# below cover idioms we use deliberately.
ignore = [
    # F541: f-strings without placeholders. Used liberally in
    # diagnostic messages where a future revision is expected to
    # interpolate; not worth churning the codebase to drop the f.
    "F541",
    # E741: ambiguous variable names (l, I, O). Mathematical
    # kernels routinely use `l` for length, `I` for current /
    # moment of inertia. Bigger lift to rename than to ignore.
    "E741",
    # E701/E702: multiple statements on one line (with colon or
    # semicolon). Used in compact lookup tables and dispatch
    # ladders inside the AST → SymPy / interpreter / formatter
    # paths. Stylistic, not a defect.
    "E701", "E702",
    # E731: lambda assignment. Two intentional uses in dispatch
    # tables where a lambda is more compact than a one-line def.
    "E731",
]

[tool.ruff.lint.per-file-ignores]
# Test files deliberately import symbols just to assert they
# exist (e.g. `from foo import CompileError as XErr`); F401
# would force us to drop the only thing the test is checking.
# Multi-statement lines (E701/E702) and unused-variable (F841)
# also surface in test fixtures — ignore both in test trees.
"**/tests/**/*.py" = ["F401", "F841", "E701", "E702", "E731"]
"**/test_*.py"    = ["F401", "F841", "E701", "E702", "E731"]
"conftest.py"     = ["F401", "F841", "E701", "E702", "E731"]
# Top-of-file module imports are placed under a try/except guard
# in two spots so the package is still importable when an
# optional dep is missing. E402 doesn't understand that pattern.
"tools/cli/main.py" = ["E402"]
"lang/parser/parser.py" = ["E402"]
"tools/benchmarks/regen_baselines.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
# `lang/`, `software/`, `hardware/`, and `tools/` are PEP 420
# namespace packages (no top-level __init__.py). Without these
# two flags mypy reports each subpackage's modules as "found
# under two different module names" (e.g. `loader.resolver` and
# `lang.loader.resolver`) and aborts before checking anything.
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
